--- a/bookstore/build.gradle
+++ b/bookstore/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-mail"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation "org.apache.commons:commons-lang3:${commonsLang3Version}"
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 tasks.named('test') {
