--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 #database connection pool
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
@@ -22,3 +23,15 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #JWT
 jwt.secret=secret
 jwt.expiration=3600000
+#mail server
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dat.tb98it@gmail.com
+spring.mail.password=ffusnvsothuwtfag
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
+
+email.from=bookstore
+account.active.link=/v1/account/verification
+base-url=http://localhost:9000
