update: verification account api

--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -33,5 +33,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
 
 email.from=bookstore
-account.active.link=/v1/account/verification
+account.active.link=/v1/accounts/verification
+account.verify.expired-time=72
 base-url=http://localhost:9000
