--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -1,38 +1,3 @@
-server.port=9000
-#spring application
-spring.application.name=ecommerce
-#context path
-server.servlet.context-path=/api
-#innit database
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
-#database connection pool
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.maximum-pool-size=5
-#liquibase
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=true
-spring.liquibase.drop-first=false
-#logging
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#JWT
-jwt.secret=secret
-jwt.expiration=3600000
-#mail server
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=dat.tb98it@gmail.com
-spring.mail.password=ffusnvsothuwtfag
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.transport.protocol=smtp
-
-email.from=bookstore
-account.active.link=/v1/accounts/verification
-account.verify.expired-time=72
-base-url=http://localhost:9000
+#active prod profile
+spring.profiles.active=dev
+#spring.profiles.active=prod
