--- a/bookstore/src/main/resources/application-dev.properties
+++ b/bookstore/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ server.port=9000
 #spring application
 spring.application.name=ecommerce
 #context path
-server.servlet.context-path=/
+server.servlet.context-path=/api
 #innit database
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useSSL=false
 spring.datasource.username=root
@@ -35,7 +35,7 @@ spring.mail.properties.mail.transport.protocol=smtp
 email.from=bookstore
 account.active.link=/v1/accounts/verification
 account.verify.expired-time=72
-base-url=http://localhost:9000
+base-url=http://localhost:4200
 
 #config log folder
 logging.file.name=app.log
