--- a/bookstore/src/main/resources/application-prod.properties
+++ b/bookstore/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ server.port=9000
 #spring application
 spring.application.name=ecommerce
 #context path
-server.servlet.context-path=/
+server.servlet.context-path=/api
 #innit database
 spring.datasource.url=jdbc:mysql://database-2.cvbaocl3snib.ap-southeast-2.rds.amazonaws.com:3306/ecomerce?useSSL=false
 spring.datasource.username=admin
@@ -35,7 +35,7 @@ spring.mail.properties.mail.transport.protocol=smtp
 email.from=bookstore
 account.active.link=/v1/accounts/verification
 account.verify.expired-time=72
-base-url=http://localhost:9000
+base-url=http://localhost:4200
 
 logging.file.name=app.log
 logging.file.path=/var/log/app/ecomerce
