update: order, shiping, docker

--- a/bookstore/src/main/resources/application-prod.properties
+++ b/bookstore/src/main/resources/application-prod.properties
@@ -18,7 +18,8 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=false
 spring.liquibase.drop-first=false
 #logging
-logging.level.org.hibernate.SQL=DEBUG
+#disable logging for hibernate
+logging.level.org.hibernate.SQL=info
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #JWT
 jwt.secret=secret
@@ -33,7 +34,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
 
-email.from=bookstore
+email.from=bookstore@gmail.com
 account.active.link=/v1/accounts/verification
 account.verify.expired-time=72
 base-url=http://localhost:4200
@@ -51,3 +52,5 @@ endpoint.partner.ghn.address.district=/shiip/public-api/master-data/district
 endpoint.partner.ghn.address.ward=/shiip/public-api/master-data/ward
 endpoint.partner.ghn.shipping.fee=/shiip/public-api/v2/shipping-order/fee
 endpoint.partner.ghn.shipping.service=/shiip/public-api/v2/shipping-order/available-services
+endpoint.partner.ghn.order.cancel=/shiip/public-api/v2/switch-status/cancel
+endpoint.partner.ghn.order.tracking=https://tracking.ghn.dev/?order_code=
