--- a/bookstore/src/main/resources/application-dev.properties
+++ b/bookstore/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ spring.application.name=ecommerce
 #context path
 server.servlet.context-path=/api
 #innit database
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useSSL=false
+spring.datasource.url=jdbc:mysql://mysql:3306/ecommerce?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -23,7 +23,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #JWT
 jwt.secret=secret
 jwt.expiration=3600000
-jwt.refresh.expiration=36000
+jwt.refresh.expiration=86400000
 #mail server
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -33,7 +33,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol=smtp
 
-email.from=bookstore
+email.from=noreplybookstore@gmail.com
 account.active.link=/v1/accounts/verification
 account.verify.expired-time=72
 base-url=http://localhost:4200
@@ -52,3 +52,11 @@ endpoint.partner.ghn.address.district=/shiip/public-api/master-data/district
 endpoint.partner.ghn.address.ward=/shiip/public-api/master-data/ward
 endpoint.partner.ghn.shipping.fee=/shiip/public-api/v2/shipping-order/fee
 endpoint.partner.ghn.shipping.service=/shiip/public-api/v2/shipping-order/available-services
+endpoint.partner.ghn.order.cancel=/shiip/public-api/v2/switch-status/cancel
+endpoint.partner.ghn.order.tracking=https://tracking.ghn.dev/?order_code=
+
+#kafka
+spring.kafka.bootstrap-servers=kafka:29092
+kafka-bootstrap-servers=kafka:29092
+kafka-topic=notification-ecommerce
+kafka-consumer-group-id=notification-ecommerce
