--- a/bookstore/docker-compose.yml
+++ b/bookstore/docker-compose.yml
@@ -1,71 +1,57 @@
 version: '3'
 
 services:
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.0.1
-    container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    networks:
-      - ecommerce
-  kafka:
-    image: confluentinc/cp-kafka:7.0.1
-    container_name: kafka
-    hostname: kafka
-    ports:
-      - "9092:29092"
-    #    volumes:
-    #      - kafka-data:/var/lib/kafka/data
-    depends_on:
-      - zookeeper
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_INTERNAL://kafka:29092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-    networks:
-      - ecommerce
-  kafka-ui:
-    image: provectuslabs/kafka-ui
-    container_name: kafka-ui
-    ports:
-      - "9999:8080"
-    restart: always
-    environment:
-      KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
-      KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper: 2181
-    depends_on:
-      - kafka
-    networks:
-      - ecommerce
+  #  zookeeper:
+  #    image: confluentinc/cp-zookeeper:7.0.1
+  #    container_name: zookeeper
+  #    environment:
+  #      ZOOKEEPER_CLIENT_PORT: 2181
+  #      ZOOKEEPER_TICK_TIME: 2000
+  #    networks:
+  #      - ecommerce
+  #  kafka:
+  #    image: confluentinc/cp-kafka:7.0.1
+  #    container_name: kafka
+  #    hostname: kafka
+  #    ports:
+  #      - "9092:29092"
+  #    #    volumes:
+  #    #      - kafka-data:/var/lib/kafka/data
+  #    depends_on:
+  #      - zookeeper
+  #    environment:
+  #      KAFKA_BROKER_ID: 1
+  #      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+  #      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+  #      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_INTERNAL://kafka:29092
+  #      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  #      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+  #      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+  #    networks:
+  #      - ecommerce
+  #  kafka-ui:
+  #    image: provectuslabs/kafka-ui
+  #    container_name: kafka-ui
+  #    ports:
+  #      - "9999:8080"
+  #    restart: always
+  #    environment:
+  #      KAFKA_CLUSTERS_0_NAME: local
+  #      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
+  #      KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper: 2181
+  #    depends_on:
+  #      - kafka
+  #    networks:
+  #      - ecommerce
   ecommerce:
     container_name: ecommerce
-#    build:
-#      dockerfile: Dockerfile
-    image: registry.gitlab.com/ecomerce-dattb/bookstore:latest
+    build:
+      dockerfile: Dockerfile
+    image: ecommerce:latest
     ports:
       - "9000:9000"
     depends_on:
       - mysql
-    environment:
-      kafka-bootstrap-servers: "kafka:29092"
-      kafka-topic: "notification-ecommerce"
-      kafka-consumer-group-id: "notification-ecommerce"
-      email.enable-white-list: 'FALSE'
-    networks:
-      - ecommerce
-  postmaster:
-    container_name: postmaster
-    image: registry.gitlab.com/ecomerce-dattb/postmaster:latest
-    ports:
-      - "8090:8090"
-    depends_on:
-      - ecommerce
     environment:
       kafka-bootstrap-servers: "kafka:29092"
       kafka-topic: "notification-ecommerce"
@@ -78,7 +64,7 @@ services:
     image: debezium/example-mysql:latest
     hostname: mysql
     ports:
-        - "3307:33060"
+      - "3307:33060"
     environment:
       MYSQL_ROOT_PASSWORD:
       MYSQL_DATABASE: ecommerce
@@ -88,11 +74,8 @@ services:
       - ~/db/mysql:/var/lib/mysql
       - ./config.cnf:/etc/mysql/conf.d/config.cnf
       - ./init-dump:/docker-entrypoint-initdb.d
-    depends_on:
-      - kafka-ui
     networks:
       - ecommerce
 networks:
   ecommerce:
     driver: bridge
-
