--- a/postmaster/src/main/resources/application.yml
+++ b/postmaster/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   kafka:
-    bootstrap-servers: kafka:29092
+    bootstrap-servers: localhost:29092
 #    create-topics:
 #      min-insync-replicas: 1
 #      partitions: 1
@@ -23,7 +23,7 @@ logging:
   pattern:
     console: "%d{ISO8601} %5p [%X{TRACE_ID}] [%40.40C{1}] [%4L] [%15.15t] - %m%n%exception"
 email:
-  white-list: "dat.tb98it@gmail.com"
+  white-list: "yen.nh0912@gmail.com"
 
 kafka-bootstrap-servers: "kafka:29092"
 kafka-topic: "notification-ecommerce"
